--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         // ============================================
         
         // URL de tu Google Sheets (REEMPLAZAR CON TU URL)
-        const GOOGLE_SHEETS_URL = "https://docs.google.com/spreadsheets/d/1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms/gviz/tq?tqx=out:csv&sheet=Class Data";
+        const GOOGLE_SHEETS_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTiCM3t58H6ASsLOPRVaeCpE8OWbdK6Gyf62PA54QHG0ZniqGiY4jaRdPEgzs05-I37xcd_GLdwZTM7/pub?gid=1874394039&single=true&output=csv";
         
         // ============================================
         // NO EDITAR A PARTIR DE AQUÍ
